@@ -19,8 +19,8 @@
 /* $Id$ */
 
 extern "C" {
-#include <ffmpeg/avformat.h>
-#include <ffmpeg/avcodec.h>
+#include <avformat.h>
+#include <avcodec.h>
 }
 #include <cstring>
 #include <utility>
